# portage-metadata

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: parse_cache.rs
src/: cache.rs  eapi.rs  error.rs  iuse.rs  keyword.rs  lib.rs  license.rs  metadata.rs  phase.rs  required_use.rs  restrict.rs  src_uri.rs
